--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="icon.png">
     <meta name="theme-color" content="#FFE8B0">
+    <meta property="og:title" content="Zorey AI - Asisten Belajar Interaktif">
+    <meta property="og:description" content="Chatbot pintar bergaya ceria untuk bantu kamu belajar, tanya apa aja! Gratis dan bisa disimpan ke WhatsApp atau Google Drive.">
+    <meta property="og:image" content="https://zorey-ai.vercel.app/preview-zorey.png">
+    <meta property="og:url" content="https://zorey-ai.vercel.app/">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,6 +33,9 @@
             <span class="material-symbols-outlined">menu</span>
         </div>
         <div class="logo">Zorey AI</div>
+        <button id="copy-button"><span class="material-symbols-outlined">content_copy</span> Salin Chat</button>
+        <button id="share-button"><span class="material-symbols-outlined">share</span> Share Chat</button>
+        <button id="dark-mode-toggle"><span class="material-symbols-outlined">dark_mode</span> Dark Mode</button>
         <button class="new-chat-button">
             <span class="material-symbols-outlined">add</span> Obrolan Baru
         </button>
@@ -48,11 +56,6 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        <button id="copy-button"><span class="material-symbols-outlined">content_copy</span> Salin Chat</button>
-        <button id="share-button"><span class="material-symbols-outlined">share</span> Share Chat</button>
-        <button id="dark-mode-toggle"><span class="material-symbols-outlined">dark_mode</span> Dark Mode</button>
-    </footer>
 
     <script src="script.js"></script>
     <script>
