--- a/index.html
+++ b/index.html
@@ -1,76 +1,60 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zorey AI - Chatbot AI Assistant</title>
-    <link rel="manifest" href="manifest.json">
-    <link rel="apple-touch-icon" href="icon.png">
-    <meta name="theme-color" content="#FFE8B0">
-    <meta property="og:title" content="Zorey AI - Asisten Belajar Interaktif">
-    <meta property="og:description" content="Zorey AI adalah chatbot pintar berbasis web yang siap membantu kamu dengan gaya yang ringan, cepat, dan modern. Coba sekarang!">
-    <meta property="og:image" content="https://zorey-ai.vercel.app/preview-zorey.png">
-    <meta property="og:url" content="https://zorey-ai.vercel.app/">
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Sora:wght@700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Zorey AI - Chatbot AI Assistant</title>
+  <link rel="manifest" href="manifest.json" />
+  <link rel="apple-touch-icon" href="icon.png" />
+  <meta name="theme-color" content="#FFE8B0" />
+  <meta property="og:title" content="Zorey AI - Asisten Belajar Interaktif" />
+  <meta property="og:description" content="Zorey AI adalah chatbot pintar berbasis web yang siap membantu kamu dengan gaya yang ringan, cepat, dan modern. Coba sekarang!" />
+  <meta property="og:image" content="https://zorey-ai.vercel.app/preview-zorey.png" />
+  <meta property="og:url" content="https://zorey-ai.vercel.app/" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Sora:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
-
-    <!-- Loading Page -->
-    <div id="loading-page">
-        <img src="logo.png" alt="Zorey AI Logo">
-        <h1>Zorey AI</h1>
+  <!-- Loading Page -->
+  <div id="loading-page">
+    <img src="logo.png" alt="Zorey AI Logo" />
+    <h1>Zorey AI</h1>
+  </div>  <!-- Hamburger Icon -->  <div class="hamburger" id="hamburger">&#9776;</div>  <!-- Navbar -->  <nav>
+    <div class="logo">Zorey AI</div>
+    <button class="new-chat-button">
+      <span class="material-symbols-outlined">add</span> Obrolan Baru
+    </button>
+  </nav>  <!-- Chat Container -->  <div class="chat-container">
+    <div id="chat-log">
+      <div class="ai-message">Halo! Ada yang bisa saya bantu?</div>
     </div>
-
-    <!-- Navbar -->
-    <nav>
-        <div class="hamburger-menu">
-            <span class="material-symbols-outlined">menu</span>
-        </div>
-        <div class="logo">Zorey AI</div>
-        <button id="copy-button"><span class="material-symbols-outlined"></button>
-        <button id="share-button"><span class="material-symbols-outlined"></button>
-        <button id="dark-mode-toggle"><span class="material-symbols-outlined"></button>
-        <button class="new-chat-button">
-            <span class="material-symbols-outlined">add</span> Obrolan Baru
-        </button>
-    </nav>
-
-    <!-- Main Chat Container -->
-    <div class="chat-container">
-        <div id="chat-log">
-            <!-- Contoh Pesan AI -->
-            <div class="ai-message">Halo! Ada yang bisa saya bantu?</div>
-        </div>
-
-        <!-- Input Box -->
-        <div class="input-container">
-            <input type="text" id="user-input" placeholder="Tanya apa saja...">
-            <button id="send-button"><span class="material-symbols-outlined">send</span></button>
-        </div>
+    <div class="input-container">
+      <input type="text" id="user-input" placeholder="Tanya apa saja..." />
+      <button id="send-button">
+        <span class="material-symbols-outlined">send</span>
+      </button>
     </div>
-
-    <!-- Footer -->
-
-    <script src="script.js"></script>
-    <script>
-        // Sembunyikan loading page setelah 3 detik
-        window.addEventListener('load', () => {
-            setTimeout(() => {
-                document.getElementById('loading-page').style.display = 'none';
-            }, 3000);
-        });
-
-        if ('serviceWorker' in navigator) {
-            window.addEventListener('load', () => {
-                navigator.serviceWorker.register('service-worker.js');
-            });
-        }
-    </script>
-</body>
+  </div>  <!-- Side Menu -->  <div id="sideMenu" class="side-menu">
+    <button class="close-btn" id="closeBtn">&times;</button>
+    <div class="menu-content">
+      <button id="copy-button">📋 Salin Chat</button>
+      <button id="share-now">🔗 Bagikan</button>
+      <button id="toggle-dark">🌙 Mode Gelap</button>
+      <select id="languageSelect">
+        <option value="id">🇮🇩 Indonesia</option>
+        <option value="en">🇬🇧 English</option>
+      </select>
+    </div>
+  </div>  <!-- Watermark -->  <img src="logo.png" alt="Zorey AI" class="watermark" />  <script src="https://unpkg.com/i18next@23.4.6/dist/umd/i18next.min.js"></script>  <script src="script.js"></script>  <script>
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        document.getElementById('loading-page').style.display = 'none';
+      }, 3000);
+      if ('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('service-worker.js');
+      }
+    });
+  </script></body>
 </html>
