--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   <img src="logo.png" alt="Zorey AI" class="watermark" />
 
   <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="https://unpkg.com/i18next@23.4.6/dist/umd/i18next.min.js"></script>
   <script src="script.js"></script>
   <script>
