--- a/index.html
+++ b/index.html
@@ -1,85 +1,164 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Zorey AI - Chatbot AI Assistant</title>
-  <link rel="manifest" href="manifest.json" />
-  <link rel="apple-touch-icon" href="icon.png" />
-  <meta name="theme-color" content="#FFE8B0" />
-  <meta property="og:title" content="Zorey AI - Asisten Belajar Interaktif" />
-  <meta property="og:description" content="Zorey AI adalah chatbot pintar berbasis web yang siap membantu kamu dengan gaya yang ringan, cepat, dan modern. Coba sekarang!" />
-  <meta property="og:image" content="https://zorey-ai.vercel.app/preview-zorey.png" />
-  <meta property="og:url" content="https://zorey-ai.vercel.app/" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <link rel="stylesheet" href="style.css" />
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Sora:wght@700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zorey AI - Chatbot AI Assistant</title>
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="icon.png">
+    <meta name="theme-color" content="#FFE8B0">
+    <meta property="og:title" content="Zorey AI - Asisten Belajar Interaktif">
+    <meta property="og:description" content="Zorey AI adalah chatbot pintar berbasis web yang siap membantu kamu dengan gaya yang ringan, cepat, dan modern. Coba sekarang!">
+    <meta property="og:image" content="https://zorey-ai.vercel.app/preview-zorey.png">
+    <meta property="og:url" content="https://zorey-ai.vercel.app/">
+    <meta name="twitter:card" content="summary_large_image">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Sora:wght@700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- i18n CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/i18next@21.6.10/i18next.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/i18next-http-backend@1.3.2/i18nextHttpBackend.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-i18next@1.2.1/jquery-i18next.min.js"></script>
 </head>
 <body>
-  <!-- Loading -->
-  <div id="loading-page">
-    <img src="logo.png" alt="Zorey AI Logo" />
-    <h1>Zorey AI</h1>
-  </div>
 
-  <!-- Header -->
-  <header>
-    <button class="hamburger" id="hamburger">&#9776;</button>
-    <h1 class="logo">Zorey AI</h1>
-    <button class="new-chat" id="new-chat">+ Obrolan Baru</button>
-  </header>
-
-  <!-- Sidebar -->
-  <aside id="sidebar">
-    <button class="close-btn" id="closeBtn">&times;</button>
-    <h2>Terbaru</h2>
-    <ul class="history">
-      <li>Sejarah singkat AI</li>
-      <li>Halo, Kamu siapa?</li>
-    </ul>
-    <hr />
-    <div class="settings">
-      <button id="copy-button">📋 Salin Chat</button>
-      <button id="share-now">🔗 Bagikan</button>
-      <button id="toggle-dark">🌙 Mode Gelap</button>
-      <select id="languageSelect">
-        <option value="id">🇮🇩 Indonesia</option>
-        <option value="en">🇬🇧 English</option>
-      </select>
+    <!-- Loading Page -->
+    <div id="loading-page">
+        <img src="logo.png" alt="Zorey AI Logo" class="loading-logo">
+        <h1>Zorey AI</h1>
+        <div id="install-prompt" class="install-prompt">
+            <p>Pasang Zorey AI di perangkat Anda untuk pengalaman lebih baik</p>
+            <button id="install-button">Pasang Sekarang</button>
+        </div>
     </div>
-  </aside>
 
-  <!-- Main Chat Area -->
-  <main>
-    <div id="chat-log" class="chat-log">
-      <div class="ai-message">Halo! Ada yang bisa saya bantu?</div>
+    <!-- Slide Menu -->
+    <div id="slide-menu" class="slide-menu">
+        <button class="close-menu">
+            <span class="material-symbols-outlined">close</span>
+        </button>
+        <div class="menu-content">
+            <button id="menu-dark-mode-toggle">
+                <span class="material-symbols-outlined">dark_mode</span>
+                <span class="menu-text">Mode Gelap</span>
+            </button>
+            <button id="menu-copy-button">
+                <span class="material-symbols-outlined">content_copy</span>
+                <span class="menu-text">Salin Chat</span>
+            </button>
+            <button id="menu-share-button">
+                <span class="material-symbols-outlined">share</span>
+                <span class="menu-text">Bagikan</span>
+            </button>
+            <button id="language-toggle">
+                <span class="material-symbols-outlined">translate</span>
+                <span class="menu-text">English/Indonesia</span>
+            </button>
+        </div>
+        <div class="watermark">
+            <img src="logo.png" alt="Zorey Logo">
+        </div>
     </div>
-    <div class="input-container">
-      <input type="text" id="user-input" placeholder="Tanya apa saja..." />
-      <button id="send-button">
-        <span class="material-symbols-outlined">send</span>
-      </button>
+
+    <!-- Navbar -->
+    <nav>
+        <div class="hamburger-menu" id="hamburger-menu">
+            <span class="material-symbols-outlined">menu</span>
+        </div>
+        <div class="logo">Zorey AI</div>
+        <button class="new-chat-button">
+            <span class="material-symbols-outlined">add</span> 
+            <span class="button-text">Obrolan Baru</span>
+        </button>
+    </nav>
+
+    <!-- Main Chat Container -->
+    <div class="chat-container">
+        <div id="chat-log">
+            <!-- Pesan AI Default -->
+            <div class="ai-message" data-i18n="welcome_message">Halo! Ada yang bisa saya bantu?</div>
+        </div>
+
+        <!-- Input Box -->
+        <div class="input-container">
+            <input type="text" id="user-input" placeholder="Tanya apa saja..." data-i18n="placeholder">
+            <button id="send-button"><span class="material-symbols-outlined">send</span></button>
+        </div>
     </div>
-  </main>
 
-  <!-- Watermark -->
-  <img src="logo.png" alt="Zorey AI" class="watermark" />
+    <script src="script.js"></script>
+    <script>
+        // Sembunyikan loading page setelah 3 detik
+        window.addEventListener('load', () => {
+            setTimeout(() => {
+                document.getElementById('loading-page').style.opacity = '0';
+                setTimeout(() => {
+                    document.getElementById('loading-page').style.display = 'none';
+                }, 500);
+            }, 3000);
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="https://unpkg.com/i18next@23.4.6/dist/umd/i18next.min.js"></script>
-  <script src="script.js"></script>
-  <script>
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.getElementById('loading-page').style.display = 'none';
-      }, 1000);
-      if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('service-worker.js');
-      }
-    });
-  </script>
+            // PWA Install Prompt
+            let deferredPrompt;
+            const installButton = document.getElementById('install-button');
+            
+            window.addEventListener('beforeinstallprompt', (e) => {
+                e.preventDefault();
+                deferredPrompt = e;
+                document.getElementById('install-prompt').style.display = 'block';
+            });
+
+            installButton.addEventListener('click', async () => {
+                if (deferredPrompt) {
+                    deferredPrompt.prompt();
+                    const { outcome } = await deferredPrompt.userChoice;
+                    if (outcome === 'accepted') {
+                        console.log('User accepted the install prompt');
+                    } else {
+                        console.log('User dismissed the install prompt');
+                    }
+                    deferredPrompt = null;
+                }
+            });
+        });
+
+        // Service Worker Registration
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('service-worker.js');
+            });
+        }
+
+        // i18n Initialization
+        i18next
+            .use(i18nextHttpBackend)
+            .init({
+                lng: 'id',
+                fallbackLng: 'en',
+                debug: true,
+                backend: {
+                    loadPath: 'locales/{{lng}}/translation.json'
+                }
+            }, function(err, t) {
+                if (err) console.error(err);
+                // Initial translation
+                updateContent();
+            });
+
+        function updateContent() {
+            document.querySelectorAll('[data-i18n]').forEach(element => {
+                const key = element.getAttribute('data-i18n');
+                element.innerHTML = i18next.t(key);
+            });
+        }
+
+        document.getElementById('language-toggle').addEventListener('click', () => {
+            const currentLang = i18next.language;
+            const newLang = currentLang === 'id' ? 'en' : 'id';
+            i18next.changeLanguage(newLang, updateContent);
+        });
+    </script>
 </body>
 </html>
